<resources>
    <string name="app_name">Maze Roller</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title">Maze Roller</string>
    <string name="levels">Level Select</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Pause">Pause</string>
    <string name="Die">You Died!</string>
    <string name="Win">You Made It!</string>
    <string name="record">Enter your name:</string>
    <string name="name">Name</string>
</resources>
