<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelSelect"
    android:background="@color/darkGrey">

    <Button
        android:id="@+id/medium"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/blue"
        android:text="@string/medium"
        android:textSize="32sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select" />

    <Button
        android:id="@+id/easy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/green"
        android:text="@string/easy"
        android:textSize="32sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/medium"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select" />

    <Button
        android:id="@+id/hard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/red"
        android:text="@string/hard"
        android:textSize="32sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/medium"
        app:layout_constraintTop_toBottomOf="@+id/select" />

    <TextView
        android:id="@+id/select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/levels"
        android:textSize="64sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>